--- a/quotes/package.json
+++ b/quotes/package.json
@@ -1,5 +1,6 @@
 {
   "name": "quotes",
+"homepage":"http://legriffalo.github.io/FCC-react-quotes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
+
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
