--- a/quotes/package.json
+++ b/quotes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quotes",
-"homepage":"http://legriffalo.github.io/FCC-react-quotes",
+  "homepage": "http://legriffalo.github.io/FCC-react-quotes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,9 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -20,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.12",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "html-react-parser": "^5.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
