--- a/quotes/package.json
+++ b/quotes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quotes",
-  "homepage": "http://legriffalo.github.io/FCC-react-quotes",
+  "homepage": "http://legriffalo.github.io/FCC-react-quotes/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
