--- a/quotes/package.json
+++ b/quotes/package.json
@@ -23,7 +23,8 @@
     "html-react-parser": "^5.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
