corrected cmd script build

--- a/quotes/Jenkinsfile
+++ b/quotes/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
                 bat 'echo "Building (if necessary)..."'
                 dir('quotes'){
                 bat 'npm install'
-                bat 'npm build'
+                bat 'npm run build'
                 }
             }
         }
