--- a/quotes/Jenkinsfile
+++ b/quotes/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                     // **Method 1: Using Render Deploy Hook (Recommended)**
                     // Requires setting up a Deploy Hook in your Render service settings.
                     // The URL will be specific to your Render service.
-                    def deployHookUrl = 'YOUR_RENDER_DEPLOY_HOOK_URL'
+                    def deployHookUrl = RENDER_DEPLOY_HOOK_URL
                     try {
                         sh "curl -X POST '${deployHookUrl}'"
                         echo "Successfully triggered Render deployment via Deploy Hook."
