--- a/quotes/Jenkinsfile
+++ b/quotes/Jenkinsfile
@@ -17,9 +17,10 @@ pipeline {
             steps {
                 script {
                     // **Method 1: Using Render Deploy Hook (Recommended)**
-                    // Requires setting up a Deploy Hook in your Render service settings.
-                    // The URL will be specific to your Render service.
-                    def deployHookUrl = credentials('RENDER_DEPLOY_HOOK_URL')
+
+                    withCredentials([string(credentialsId: 'RENDER_DEPLOY_HOOK_URL', variable: 'DEPLOY_HOOK')]) {
+                    def deployHookUrl = "${DEPLOY_HOOK}" // Retrieve the credential value into a Groovy variable
+
                     try {
                         bat "curl -X POST \"${deployHookUrl}\""
                         echo "Successfully triggered Render deployment via Deploy Hook."
