--- a/quotes/Jenkinsfile
+++ b/quotes/Jenkinsfile
@@ -17,10 +17,8 @@ pipeline {
             steps {
                 script {
                     // **Method 1: Using Render Deploy Hook (Recommended)**
-
-                    withCredentials([string(credentialsId: 'RENDER_DEPLOY_HOOK_URL', variable: 'DEPLOY_HOOK')]) {
-                    def deployHookUrl = "${DEPLOY_HOOK}" // Retrieve the credential value into a Groovy variable
-
+                    // withCredentials([string(credentialsId: 'RENDER_DEPLOY_HOOK_URL', variable: 'DEPLOY_HOOK')]) {
+                    def deployHookUrl = env.RENDER_DEPLOY_HOOK_URL
                     try {
                         bat "curl -X POST \"${deployHookUrl}\""
                         echo "Successfully triggered Render deployment via Deploy Hook."
@@ -28,7 +26,7 @@ pipeline {
                         error "Failed to trigger Render deployment: ${e.getMessage()}"
                     }
 
-                   }
+                   
                 }
             }
         }
