--- a/quotes/Jenkinsfile
+++ b/quotes/Jenkinsfile
@@ -7,9 +7,18 @@ pipeline {
                 // Add build steps if your project requires them (e.g., npm install, npm build)
                 // For a static site, this stage might be skipped.
                 bat 'echo "Building (if necessary)..."'
+                bat 'echo entering work dir quotes'
                 dir('quotes'){
+                bat 'echo "Contents of workspace root:"'
+                bat 'dir .'
+                bat 'echo "Contents of quotes directory:"'
+                bat 'echo "Running npm install..."'
                 bat 'npm install'
+                bat 'echo "Running npm run build..."'
                 bat 'npm run build'
+                bat 'npm run build'
+                bat 'echo checking contents for idst folder'
+                bat 'dir .'
                 }
             }
         }
