--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "quotes/package.json", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "public": "/assets"
 }
